--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Page not found</title>
     <script>
-      window.location.href = "/index.html";
+      window.location.href = "/";
     </script>
   </head>
   <body>
