--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
   <link class="border-3" rel="icon" type="image/png" sizes="16x16" href="./icon/favicon-16x16.png">
   <link rel="icon" type="image/x-icon" href="./icon/favicon-16x16.png">
 
-  <link rel="stylesheet" href="./public/main.css">
+  <link rel="stylesheet" href="./main.css">
 
   <title>Martinescu Constantin</title>
 
